--- a/software/simulator/Makefile
+++ b/software/simulator/Makefile
@@ -1,14 +1,14 @@
 run: build/sim_cli
-	build/sim_cli -o memory.bin -r registers.csv ../programs/test_main.bin
+	build/sim_cli -o memory.bin -r registers.csv ../programs/test_baremetal/test_main.bin
 
 build/sim_cli: build build/sim_cli.o build/rv32i_simulator.o
-	gcc build/sim_cli.o build/rv32i_simulator.o -o ./build/sim_cli
+	gcc -O5 build/sim_cli.o build/rv32i_simulator.o -o ./build/sim_cli
 
 build/sim_cli.o: build src/sim_cli.c
-	gcc -Isrc -c src/sim_cli.c -o build/sim_cli.o
+	gcc -O5 -Isrc -c src/sim_cli.c -o build/sim_cli.o
 
 build/rv32i_simulator.o: build src/rv32i_simulator.c src/rv32i_simulator.h
-	gcc -Isrc -c src/rv32i_simulator.c -o build/rv32i_simulator.o
+	gcc -O5 -Isrc -c src/rv32i_simulator.c -o build/rv32i_simulator.o
 
 build:
 	mkdir -p build
