Basic operational stuff, FPGA capable SoC!

--- a/rtl/soc_sim/verilator/Makefile
+++ b/rtl/soc_sim/verilator/Makefile
@@ -1,13 +1,19 @@
 VERILOG_DIR=../..
 HDL_FILES=$(VERILOG_DIR)/soc_sim/soc_sim.sv $(VERILOG_DIR)/alu/alu.sv $(VERILOG_DIR)/common/memory.sv $(VERILOG_DIR)/cpu/cpu.sv 
+SIM_DIR=../../../software/simulator
+ASSEMBLER=$(SIM_DIR)/asm2bin.py
+PROGRAM_FILE=../../../software/programs/assembly/test_program.S
 
 .PHONY: run
 
-run: obj_dir/Vsoc_sim
+run: obj_dir/memory.bin obj_dir/Vsoc_sim
 	obj_dir/Vsoc_sim
+
+obj_dir/memory.bin: $(PROGRAM_FILE)
+	$(ASSEMBLER) $(PROGRAM_FILE) --bin -o obj_dir/memory.bin
 
 obj_dir/Vsoc_sim: generate
 	$(MAKE) -C obj_dir -f Vsoc_sim.mk Vsoc_sim
 
 generate: main.cpp $(HDL_FILES)
-	verilator -cc -I$(VERILOG_DIR) -I$(VERILOG_DIR)/common --trace --top soc_sim $(HDL_FILES) -GINITF="\"../../../software/programs/assembly/test_program.txt\"" --exe main.cpp
+	verilator -cc -I$(VERILOG_DIR) -I$(VERILOG_DIR)/common --trace --top soc_sim $(HDL_FILES) --exe main.cpp ../$(SIM_DIR)/build/rv32i_simulator.o
