--- a/rtl/soc_sim/verilator/Makefile
+++ b/rtl/soc_sim/verilator/Makefile
@@ -6,8 +6,8 @@ PROGRAM_FILE=../../../software/programs/assembly/test_program.S
 
 .PHONY: run
 
-run: obj_dir/memory.bin obj_dir/Vsoc_sim
-	obj_dir/Vsoc_sim
+run:  obj_dir/Vsoc_sim obj_dir/memory.bin
+	obj_dir/Vsoc_sim -v -d -l256 obj_dir/memory.bin
 
 obj_dir/memory.bin: $(PROGRAM_FILE)
 	$(ASSEMBLER) $(PROGRAM_FILE) --bin -o obj_dir/memory.bin
@@ -16,4 +16,4 @@ obj_dir/Vsoc_sim: generate
 	$(MAKE) -C obj_dir -f Vsoc_sim.mk Vsoc_sim
 
 generate: main.cpp $(HDL_FILES)
-	verilator -cc -I$(VERILOG_DIR) -I$(VERILOG_DIR)/common --trace --top soc_sim $(HDL_FILES) --exe main.cpp ../$(SIM_DIR)/build/rv32i_simulator.o
+	verilator -cc -I$(VERILOG_DIR) -I$(VERILOG_DIR)/common --trace --no-trace-params --top soc_sim $(HDL_FILES) --exe main.cpp ../$(SIM_DIR)/build/rv32i_simulator.o
