--- a/software/simulator/test/Makefile
+++ b/software/simulator/test/Makefile
@@ -2,11 +2,11 @@ ASMFILES := $(wildcard asm/*.S)
 OUTPUTS := $(patsubst asm/%.S,build/%.bin,$(wildcard asm/*.S))
 # .PHONY: $(OUTPUTS)
 
-test: sim_tests.c assemble build
+test: sim_tests.c $(OUTPUTS) build
 	gcc $< ../build/rv32i_simulator.o -o ./build/test -lcheck -lsubunit -lm -I../src
 	./build/test
 
-assemble: $(ASMFILES) build
+$(OUTPUTS): $(ASMFILES) build
 	python3 ./assembletests.py
 
 build:
