New memory model refactor, implemented monolithic memory.

--- a/software/simulator/test/Makefile
+++ b/software/simulator/test/Makefile
@@ -1,12 +1,11 @@
-ASMFILES := $(wildcard asm/*.S)
-OUTPUTS := $(patsubst asm/%.S,build/%.bin,$(wildcard asm/*.S))
-# .PHONY: $(OUTPUTS)
 
-test: sim_tests.c $(OUTPUTS) build
+
+test: sim_tests.c assemble build
 	gcc $< ../build/rv32i_simulator.o -o ./build/test -lcheck -lsubunit -lm -I../src
 	./build/test
 
-$(OUTPUTS): $(ASMFILES) build
+.PHONY: assemble
+assemble: build
 	python3 ./assembletests.py
 
 build:
