VGA Simulator! Improved simulator file IO.

--- a/software/.vscode/settings.json
+++ b/software/.vscode/settings.json
@@ -4,8 +4,7 @@
 		"*.fs": "fsharp",
 		"*.html": "html",
 		"*.ipynb": "python",
-		"cpu_time.h": "c",
 		"led_matrix.h": "c",
-		"stdint.h": "c"
+		"cpu_time.h": "c"
 	}
 }
