Fixed a CPU bug preventing SRAM from working. Operational SRAM for upduino & improvements.

--- a/rtl/soc_sim/Makefile
+++ b/rtl/soc_sim/Makefile
@@ -1,7 +1,7 @@
 # Makefile
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
-VERILOG_SOURCES += $(PWD)/soc_sim.sv $(PWD)/../cpu/cpu.sv $(PWD)/../alu/alu.sv $(PWD)/../common/memory.sv
+VERILOG_SOURCES += $(PWD)/soc_sim.sv $(PWD)/../cpu/cpu.sv $(PWD)/../alu/alu.sv $(PWD)/../common/memory.sv $(PWD)/../common/memory_spram.sv
 # EXTRA_ARGS += --trace --trace-structs
 WAVES=1
 
