--- a/software/programs/test_embedded/Makefile
+++ b/software/programs/test_embedded/Makefile
@@ -4,31 +4,26 @@ SIMULATOR=../../simulator/build/sim_emulator
 COMPILE=riscv32-unknown-elf-gcc -I$(LIBDIR) -g -march=rv32i -mabi=ilp32  -Wall -nostartfiles  -ffunction-sections -fdata-sections -mstrict-align -Wl,--gc-sections -ffp-contract=off -lm -lc -lgcc -Tmap.ld crt0.S
 
 .PHONY: all
-all: build/main.hex build/main.bin build/graphics_test.bin
+all: build/icefun_main.hex build/upduino_main.hex build/graphics_test.hex
 
 .PHONY: sim
-sim: build/main.bin
-	$(SIMULATOR) -l build/main.bin
+sim: build/icefun_main.hex
+	$(SIMULATOR) -l build/icefun_main.hex
 
-build/main.hex: build/main.elf
-	$(OBJCOPY) build/main.elf --hex -o build/main.hex
-
-build/main.bin: build/main.elf
-	$(OBJCOPY) build/main.elf --raw -o build/main.bin
-
-.PHONY: dissasemble
-dissasemble: build/main.elf
-	riscv32-unknown-elf-objdump -d -S build/main.elf
-	riscv32-unknown-elf-size build/main.elf
-
-.PHONY: build/main.elf
-build/main.elf: build main.c
-	$(COMPILE) main.c -o build/main.elf
-	riscv32-unknown-elf-size build/main.elf
-
-build/graphics_test.bin: graphics_test.c
+.PHONY: build/graphics_test.hex
+build/graphics_test.hex: graphics_test.c
 	$(COMPILE) graphics_test.c -o build/graphics_test.elf
-	$(OBJCOPY) build/graphics_test.elf --raw -o build/graphics_test.bin
+	$(OBJCOPY) build/graphics_test.elf --hex -o build/graphics_test.hex
+
+.PHONY: build/icefun_main.hex
+build/icefun_main.hex: icefun_main.c build
+	$(COMPILE) icefun_main.c -o build/icefun_main.elf
+	$(OBJCOPY) build/icefun_main.elf --hex -o build/icefun_main.hex
+	
+.PHONY: build/upduino_main.hex
+build/upduino_main.hex: upduino_main.c build
+	$(COMPILE) upduino_main.c -o build/upduino_main.elf
+	$(OBJCOPY) build/upduino_main.elf --hex -o build/upduino_main.hex
 
 build:
 	mkdir -p build
