Fully functional CONWAY'S GAME OF LIFE!

--- a/software/.vscode/settings.json
+++ b/software/.vscode/settings.json
@@ -9,6 +9,8 @@
 		"stdint.h": "c",
 		"cstdint": "c",
 		"soc_io.h": "c",
-		"soc_core.h": "c"
+		"soc_core.h": "c",
+		"sstream": "c",
+		"regex": "c"
 	}
 }
