--- a/software/programs/bootloader/Makefile
+++ b/software/programs/bootloader/Makefile
@@ -6,7 +6,7 @@ COMPILE=riscv32-unknown-elf-gcc -I$(LIBDIR) -g -march=rv32im -mabi=ilp32  -Wall 
 COMPILE_FULL=$(COMPILE) -lm -lc -lgcc $(LIB_SOURCES)
 
 # .PHONY: all
-all: build/test_bootloaded.hex build/bootloader.hex build/bootloader_v2.hex
+all: build/test_bootloaded.hex build/bootloader.hex build/bootloader_v2.hex build/cgol_image.bin
 
 # .PHONY: sim
 # sim: build/icefun_main.hex
@@ -15,6 +15,10 @@ all: build/test_bootloaded.hex build/bootloader.hex build/bootloader_v2.hex
 build/test_bootloaded.hex: build test_bootloaded.c
 	$(COMPILE_FULL) -Os  -T$(LIBDIR)/map_bootloaded.ld test_bootloaded.c -o build/test_bootloaded.elf
 	$(OBJCOPY) build/test_bootloaded.elf --hex -o build/test_bootloaded.hex
+
+build/cgol.hex: build ../test_embedded/cgol.c
+	$(COMPILE_FULL) -O5 -T$(LIBDIR)/map_bootloaded.ld ../test_embedded/cgol.c -o build/cgol.elf
+	$(OBJCOPY) build/cgol.elf --hex -o build/cgol.hex
 
 build/bootloader.hex: build bootloader.S
 	$(COMPILE) bootloader.S -o build/bootloader.elf
@@ -25,6 +29,9 @@ build/bootloader_v2.hex: build bootloader_v2.c
 	$(COMPILE) -nostdlib -Os -T$(LIBDIR)/map.ld $(LIBDIR)/crt0_minimal.S $(LIBDIR)/soc_core.c $(LIBDIR)/soc_io.c bootloader_v2.c -o build/bootloader_v2.elf
 	riscv32-unknown-elf-size build/bootloader_v2.elf
 	$(OBJCOPY) build/bootloader_v2.elf --hex -o build/bootloader_v2.hex
+
+build/cgol_image.bin: build/cgol.hex
+	python3 ./create_flash_image.py $< $@
 
 build:
 	mkdir -p build
